5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1888_3124.log
== TEST (2019-07-09 16:39:20) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m = sum(v)/(1/size(v))
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:41:10) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m = sum(v)/(1/size(v))
print(round(m,2))
-- EXECUTION TIME:
1.09211
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
240.1
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
138.6
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
77.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:16) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m = sum(v)/(1/size(v))
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:09) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m=0
for i in range(size(v))
  m=v [1] * v [1]
   m=m+1
	m sum (m/(1/size(v)))
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    for i in range(size(v))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:22) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m=0
for i in range(size(v))
  m=v [1] * v [1]
   m=m+1
	m = sum (m/(1/size(v)))
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    for i in range(size(v))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:34) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m=0
for i in range(size(v))
  m= v[0] * v [1]
   m=m+1
M = m/(1/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 4
    for i in range(size(v))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:52) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m=0
for i in range(size(v)):
  m= v[0] * v [1]
   m=m+1
M = m/(1/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 6
    m=m+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:09) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m=0
for i in range(size(v)):
  m= v[0] * v [1]
  m= m + 1
M = m/(1/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:50:01) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m=0
for i in range(size(v)):
  m= v[0] * v [1]
  m= m + 1
M = m/(1/size(v))
print(round(M,2))
-- EXECUTION TIME:
0.838058
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
45.57
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
20.52
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
16.55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:52:18) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))
m=0
for i in range(size(v)):
  m= v[0] * v [1]
  v[i]= v[i] + 1
M = m/(1/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
